# bitdex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
configs/: civitai-index.json
docs/: architecture-risk-review.md  backpressure-constraints.md  benchmark-comparison-loading-mode.md  benchmark-report.md  bitdex-civitai-schema.md  config-schema.md  design-arcswap-redb-reconciliation.md  design-backpressure-autothrottle.md  design-backpressure-implementation.md  design-unified-cache-final.md  design-unified-cache.md  discord-zach-provisioning.md  implementation-plan.md  roadmap-performance-and-persistence.md  shadow-mode-plan.md  unified-cache-qa.md  write-regression-loading-mode.md
docs/audit/: phase-a-audit.md  phase-b-audit.md  phase-c-audit.md  phase-d-audit.md  phase-e-audit.md  prereq-audit.md  synthesis.md
docs/brainstorm/: backpressure-pipeline.md  bulk-bitmap-construction.md  channel-centric-backpressure.md  hybrid-flush-architecture.md  ndjson-ingestion-pipeline.md
docs/in/: Claude-Bitdex (1).md  Claude-Bitdex.md  Claude-Workers vs threads in Rust.md  claude-bitdex-continued-1.md  config-schema-v2.md  new-parallelization-strat.md  prepared-prompt.md  storage-overhaul.md
src/: bitmap_fs.rs  bitmap_store.rs  bound_cache.rs  cache.rs  concurrency.rs  concurrent_engine.rs  config.rs  docstore.rs  engine.rs  error.rs  executor.rs  filter.rs  lib.rs  loader.rs  main.rs  meta_index.rs  mutation.rs  pending_buffer.rs  planner.rs  query.rs  server.rs  slot.rs  sort.rs  tier2_cache.rs  time_buckets.rs  types.rs  unified_cache.rs  versioned_bitmap.rs  write_coalescer.rs
src/parser/: json.rs
static/: index.html
tests/: bench_bucket_diff.rs  bench_hashmap_keys.rs  bench_lru_eviction.rs  bench_sort_traversal.rs  cache_maintenance_bench.rs  phase1_integration.rs  proptest_correctness.proptest-regressions  proptest_correctness.rs  restart_test.rs  time_handling_test.rs
tools/: compare-server.mjs  e2e-unified-cache.mjs  example-workload.json  perf-harness.sh
