[package]
name = "bitdex-v2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Purpose-built in-memory bitmap index engine"
keywords = ["bitmap", "index", "database", "search", "roaring"]

[dependencies]
# Bitmap indexes
roaring = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# On-disk document store
redb = "2"
bincode = "1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Property-based testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
rand = "0.8"
tempfile = "3"


[[bench]]
name = "engine_bench"
harness = false

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
