[package]
name = "bitdex-v2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Purpose-built in-memory bitmap index engine"
keywords = ["bitmap", "index", "database", "search", "roaring"]

[dependencies]
# Bitmap indexes
roaring = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Concurrency
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
arc-swap = "1"

# On-disk document store
redb = "2"
bincode = "1"

# Tier 2 bitmap cache
moka = { version = "0.12", features = ["sync"] }

# Parallel sort / iteration
rayon = "1"

# RNG (used by benchmark binary)
rand = "0.8"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Property-based testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
rand = "0.8"
tempfile = "3"


[[bench]]
name = "engine_bench"
harness = false

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

# [[bin]]
# name = "throughput_experiment"
# path = "src/bin/throughput_experiment.rs"
