[package]
name = "bitdex-v2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Purpose-built in-memory bitmap index engine"
keywords = ["bitmap", "index", "database", "search", "roaring"]

[features]
default = []
server = ["axum", "tower-http", "tokio"]
loadtest = ["ureq"]

[dependencies]
# Bitmap indexes
roaring = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime (optional — only needed for HTTP server)
tokio = { version = "1", features = ["full"], optional = true }

# Concurrency
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
arc-swap = "1"

# Serialization (document store)
rmp-serde = "1"
zstd = "0.13"

# Parallel sort / iteration
rayon = "1"

# Allocator (handles concurrent allocation much better than Windows CRT)
rpmalloc = "0.2"

# HTTP server (optional — only needed for HTTP server)
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# HTTP client (optional — only needed for loadtest binary)
ureq = { version = "2", optional = true }

# RNG (used by benchmark binary)
rand = "0.8"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Property-based testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
rand = "0.8"
tempfile = "3"


[[bench]]
name = "engine_bench"
harness = false

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

# [[bin]]
# name = "throughput_experiment"
# path = "src/bin/throughput_experiment.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["loadtest"]
